cmake_minimum_required(VERSION 2.6)

project(MOBIAFOR2d)

add_executable(MOBIAFOR2d
BoxCollider.h
BoxCollider.cpp
CircleCollider.h
CircleCollider.cpp
Collider.h
Collider.cpp
ConvexCollider.h
ConvexCollider.cpp
CoreTypes.h
Error.h
Error.cpp
MathDefs.h
Particle.h
Particle.cpp
ParticleSystem.h
ParticleSystem.cpp
Transform.h
Transform.cpp
Vector2.h
Vector2.cpp

TEMP_MAIN.cpp
)